projects/compiler/test/typechecker/invocation/error_instantiation_generics.1.abra
type Foo<T> { t: T }

var _: Foo<String> = Foo(t: 123)
